<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="8dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        >

        <ImageView
            android:id="@+id/imgPlayer"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
        
        <TextView
            android:id="@+id/namePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/imgPlayer"
            app:layout_constraintTop_toTopOf="@id/imgPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/name_player"
            />
        
        <TextView
            android:id="@+id/umurPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Umur"
            app:layout_constraintStart_toStartOf="@id/namePlayer"
            app:layout_constraintTop_toBottomOf="@id/namePlayer"
            app:layout_constraintEnd_toEndOf="@id/namePlayer"
            tools:text="@string/umur_player"
            />

        <TextView
            android:id="@+id/negaraPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgPlayer"
            app:layout_constraintTop_toBottomOf="@+id/umurPlayer"
            tools:text="@string/negara_player" />

        <TextView
            android:id="@+id/posisiPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            tools:text="@string/posisi_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPlayer"
            app:layout_constraintTop_toBottomOf="@+id/negaraPlayer" />

        <TextView
            android:id="@+id/descPlayer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/negaraPlayer"
            app:layout_constraintStart_toEndOf="@+id/imgPlayer"
            app:layout_constraintTop_toBottomOf="@+id/negaraPlayer"
            tools:text="@string/desc_player"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>